feat: 移除应用级 Origin 校验
